tests/snapshots/parser_tests__err_return_outside_function.diag.snap
---
source: tests/parser_tests.rs
expression: error_msg
---
● E2000: Parse Error
────────────────────────────────────────────────────────────
  → <input>:2:8

     2 │
       │ return 42
       │        ^^^
       │

  ⓘ Expected identifier
────────────────────────────────────────────────────────────
